# online-service-mcp-server

./: AKS_DEPLOYMENT_GUIDE.md  ARCHITECTURE.md  FASTMCP_MIGRATION_SUMMARY.md  MCP_CLIENT_FASTMCP_MIGRATION.md  MIGRATION_CHECKLIST.md  README.md
.github/: copilot-instructions.md
mcp-client/: .dockerignore  .gitlab-ci.yml  AKS_DEPLOYMENT_GUIDE.md  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mcp-client/helm/mcp-client-chart/: Chart.yaml  values.yaml
mcp-client/helm/mcp-client-chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  serviceaccount.yaml
mcp-client/src/: __init__.py  config.py  main.py
mcp-client/src/auth/: azure_identity.py
mcp-client/src/client/: __init__.py  mcp_client.py  tool_discoverer.py
mcp-client/tests/: conftest.py
mcp-client/tests/contract/: __init__.py  test_contract.py
mcp-server/: .dockerignore  .gitlab-ci.yml  AKS_DEPLOYMENT_GUIDE.md  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mcp-server/helm/mcp-server-chart/: Chart.yaml  values.yaml
mcp-server/helm/mcp-server-chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
mcp-server/src/: __init__.py  config.py  main.py
mcp-server/src/auth/: __init__.py  azure_identity.py
mcp-server/src/clients/: __init__.py  rest_client.py
mcp-server/src/logging/: __init__.py
mcp-server/src/models/: __init__.py  errors.py  schemas.py
mcp-server/src/tools/: __init__.py  data_tools.py  ticket_tools.py  user_tools.py
mcp-server/tests/: conftest.py
mcp-server/tests/integration/: test_server.py
mcp-server/tests/unit/: test_auth.py  test_tools.py
